force-app/main/default/objects/Experience_and_Salary__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Experience_and_Salaries1</relationshipName>
    <type>Lookup</type>
</CustomField>