force-app/main/default/objects/Experience_and_Salary__c/fields/Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary__c</fullName>
    <label>Current Salary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>