force-app/main/default/objects/Experience_and_Salary__c/fields/Experience_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Years__c</fullName>
    <label>Experience in Years</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>