force-app/main/default/objects/Experience_and_Salary__c/validationRules/ExperienceValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ExperienceValidation</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( Experience_in_Years__c ) &gt; Experience_in_Years__c</errorConditionFormula>
    <errorDisplayField>Experience_in_Years__c</errorDisplayField>
    <errorMessage>Current Experience should be greater than previous experience</errorMessage>
</ValidationRule>